# Text-Editor

./: CMakeLists.txt  README.md  glad.c  test.txt
Shaders/: cursor_frag.frag  text_frag.frag  text_vert.vert
includes/freetype/freetype/config/: ftoption.h
includes/glad/: glad.h
libs/: libfreetype.6.dylib
src/: EditorSettings.h  FileHelper.cpp  FileHelper.h  includes.h  main.cpp
src/Backend/: Camera.cpp  Camera.h
src/Backend/CharacterSystem/: Character.cpp  Character.h  FontSystem.cpp  FontSystem.h  Page.cpp  Page.h  RendererSystem.cpp  RendererSystem.h  Sqaure.cpp  Sqaure.h  SqaureManager.cpp  SqaureManager.h
src/Backend/Utils/: OpenGLUtility.cpp  OpenGLUtility.h
src/Clock/: Clock.cpp  Clock.h
src/WindowSystem/: GWindow.cpp  GWindow.h  WindowSystemUtility.cpp  WindowSystemUtility.h
